Mini-Project/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> statement
Rule 1     statement -> if_statement
Rule 2     statement -> assignment
Rule 3     if_statement -> IF condition THEN statements END
Rule 4     if_statement -> IF condition THEN statements ELSE statements END
Rule 5     condition -> ID OP expr
Rule 6     statements -> statements statement
Rule 7     statements -> statement
Rule 8     assignment -> ID ASSIGN expr
Rule 9     expr -> NUMBER
Rule 10    expr -> ID
Rule 11    expr -> expr PLUS expr

Terminals, with rules where they appear

ASSIGN               : 8
ELSE                 : 4
END                  : 3 4
ID                   : 5 8 10
IF                   : 3 4
NUMBER               : 9
OP                   : 5
PLUS                 : 11
THEN                 : 3 4
error                : 

Nonterminals, with rules where they appear

assignment           : 2
condition            : 3 4
expr                 : 5 8 11 11
if_statement         : 1
statement            : 6 7 0
statements           : 3 4 4 6

Parsing method: LALR

state 0

    (0) S' -> . statement
    (1) statement -> . if_statement
    (2) statement -> . assignment
    (3) if_statement -> . IF condition THEN statements END
    (4) if_statement -> . IF condition THEN statements ELSE statements END
    (8) assignment -> . ID ASSIGN expr

    IF              shift and go to state 4
    ID              shift and go to state 5

    statement                      shift and go to state 1
    if_statement                   shift and go to state 2
    assignment                     shift and go to state 3

state 1

    (0) S' -> statement .



state 2

    (1) statement -> if_statement .

    $end            reduce using rule 1 (statement -> if_statement .)
    END             reduce using rule 1 (statement -> if_statement .)
    ELSE            reduce using rule 1 (statement -> if_statement .)
    IF              reduce using rule 1 (statement -> if_statement .)
    ID              reduce using rule 1 (statement -> if_statement .)


state 3

    (2) statement -> assignment .

    $end            reduce using rule 2 (statement -> assignment .)
    END             reduce using rule 2 (statement -> assignment .)
    ELSE            reduce using rule 2 (statement -> assignment .)
    IF              reduce using rule 2 (statement -> assignment .)
    ID              reduce using rule 2 (statement -> assignment .)


state 4

    (3) if_statement -> IF . condition THEN statements END
    (4) if_statement -> IF . condition THEN statements ELSE statements END
    (5) condition -> . ID OP expr

    ID              shift and go to state 7

    condition                      shift and go to state 6

state 5

    (8) assignment -> ID . ASSIGN expr

    ASSIGN          shift and go to state 8


state 6

    (3) if_statement -> IF condition . THEN statements END
    (4) if_statement -> IF condition . THEN statements ELSE statements END

    THEN            shift and go to state 9


state 7

    (5) condition -> ID . OP expr

    OP              shift and go to state 10


state 8

    (8) assignment -> ID ASSIGN . expr
    (9) expr -> . NUMBER
    (10) expr -> . ID
    (11) expr -> . expr PLUS expr

    NUMBER          shift and go to state 13
    ID              shift and go to state 11

    expr                           shift and go to state 12

state 9

    (3) if_statement -> IF condition THEN . statements END
    (4) if_statement -> IF condition THEN . statements ELSE statements END
    (6) statements -> . statements statement
    (7) statements -> . statement
    (1) statement -> . if_statement
    (2) statement -> . assignment
    (3) if_statement -> . IF condition THEN statements END
    (4) if_statement -> . IF condition THEN statements ELSE statements END
    (8) assignment -> . ID ASSIGN expr

    IF              shift and go to state 4
    ID              shift and go to state 5

    statements                     shift and go to state 14
    statement                      shift and go to state 15
    if_statement                   shift and go to state 2
    assignment                     shift and go to state 3

state 10

    (5) condition -> ID OP . expr
    (9) expr -> . NUMBER
    (10) expr -> . ID
    (11) expr -> . expr PLUS expr

    NUMBER          shift and go to state 13
    ID              shift and go to state 11

    expr                           shift and go to state 16

state 11

    (10) expr -> ID .

    PLUS            reduce using rule 10 (expr -> ID .)
    $end            reduce using rule 10 (expr -> ID .)
    END             reduce using rule 10 (expr -> ID .)
    ELSE            reduce using rule 10 (expr -> ID .)
    IF              reduce using rule 10 (expr -> ID .)
    ID              reduce using rule 10 (expr -> ID .)
    THEN            reduce using rule 10 (expr -> ID .)


state 12

    (8) assignment -> ID ASSIGN expr .
    (11) expr -> expr . PLUS expr

    $end            reduce using rule 8 (assignment -> ID ASSIGN expr .)
    END             reduce using rule 8 (assignment -> ID ASSIGN expr .)
    ELSE            reduce using rule 8 (assignment -> ID ASSIGN expr .)
    IF              reduce using rule 8 (assignment -> ID ASSIGN expr .)
    ID              reduce using rule 8 (assignment -> ID ASSIGN expr .)
    PLUS            shift and go to state 17


state 13

    (9) expr -> NUMBER .

    PLUS            reduce using rule 9 (expr -> NUMBER .)
    $end            reduce using rule 9 (expr -> NUMBER .)
    END             reduce using rule 9 (expr -> NUMBER .)
    ELSE            reduce using rule 9 (expr -> NUMBER .)
    IF              reduce using rule 9 (expr -> NUMBER .)
    ID              reduce using rule 9 (expr -> NUMBER .)
    THEN            reduce using rule 9 (expr -> NUMBER .)


state 14

    (3) if_statement -> IF condition THEN statements . END
    (4) if_statement -> IF condition THEN statements . ELSE statements END
    (6) statements -> statements . statement
    (1) statement -> . if_statement
    (2) statement -> . assignment
    (3) if_statement -> . IF condition THEN statements END
    (4) if_statement -> . IF condition THEN statements ELSE statements END
    (8) assignment -> . ID ASSIGN expr

    END             shift and go to state 18
    ELSE            shift and go to state 19
    IF              shift and go to state 4
    ID              shift and go to state 5

    statement                      shift and go to state 20
    if_statement                   shift and go to state 2
    assignment                     shift and go to state 3

state 15

    (7) statements -> statement .

    END             reduce using rule 7 (statements -> statement .)
    ELSE            reduce using rule 7 (statements -> statement .)
    IF              reduce using rule 7 (statements -> statement .)
    ID              reduce using rule 7 (statements -> statement .)


state 16

    (5) condition -> ID OP expr .
    (11) expr -> expr . PLUS expr

    THEN            reduce using rule 5 (condition -> ID OP expr .)
    PLUS            shift and go to state 17


state 17

    (11) expr -> expr PLUS . expr
    (9) expr -> . NUMBER
    (10) expr -> . ID
    (11) expr -> . expr PLUS expr

    NUMBER          shift and go to state 13
    ID              shift and go to state 11

    expr                           shift and go to state 21

state 18

    (3) if_statement -> IF condition THEN statements END .

    $end            reduce using rule 3 (if_statement -> IF condition THEN statements END .)
    END             reduce using rule 3 (if_statement -> IF condition THEN statements END .)
    ELSE            reduce using rule 3 (if_statement -> IF condition THEN statements END .)
    IF              reduce using rule 3 (if_statement -> IF condition THEN statements END .)
    ID              reduce using rule 3 (if_statement -> IF condition THEN statements END .)


state 19

    (4) if_statement -> IF condition THEN statements ELSE . statements END
    (6) statements -> . statements statement
    (7) statements -> . statement
    (1) statement -> . if_statement
    (2) statement -> . assignment
    (3) if_statement -> . IF condition THEN statements END
    (4) if_statement -> . IF condition THEN statements ELSE statements END
    (8) assignment -> . ID ASSIGN expr

    IF              shift and go to state 4
    ID              shift and go to state 5

    statements                     shift and go to state 22
    statement                      shift and go to state 15
    if_statement                   shift and go to state 2
    assignment                     shift and go to state 3

state 20

    (6) statements -> statements statement .

    END             reduce using rule 6 (statements -> statements statement .)
    ELSE            reduce using rule 6 (statements -> statements statement .)
    IF              reduce using rule 6 (statements -> statements statement .)
    ID              reduce using rule 6 (statements -> statements statement .)


state 21

    (11) expr -> expr PLUS expr .
    (11) expr -> expr . PLUS expr

  ! shift/reduce conflict for PLUS resolved as shift
    $end            reduce using rule 11 (expr -> expr PLUS expr .)
    END             reduce using rule 11 (expr -> expr PLUS expr .)
    ELSE            reduce using rule 11 (expr -> expr PLUS expr .)
    IF              reduce using rule 11 (expr -> expr PLUS expr .)
    ID              reduce using rule 11 (expr -> expr PLUS expr .)
    THEN            reduce using rule 11 (expr -> expr PLUS expr .)
    PLUS            shift and go to state 17

  ! PLUS            [ reduce using rule 11 (expr -> expr PLUS expr .) ]


state 22

    (4) if_statement -> IF condition THEN statements ELSE statements . END
    (6) statements -> statements . statement
    (1) statement -> . if_statement
    (2) statement -> . assignment
    (3) if_statement -> . IF condition THEN statements END
    (4) if_statement -> . IF condition THEN statements ELSE statements END
    (8) assignment -> . ID ASSIGN expr

    END             shift and go to state 23
    IF              shift and go to state 4
    ID              shift and go to state 5

    statement                      shift and go to state 20
    if_statement                   shift and go to state 2
    assignment                     shift and go to state 3

state 23

    (4) if_statement -> IF condition THEN statements ELSE statements END .

    $end            reduce using rule 4 (if_statement -> IF condition THEN statements ELSE statements END .)
    END             reduce using rule 4 (if_statement -> IF condition THEN statements ELSE statements END .)
    ELSE            reduce using rule 4 (if_statement -> IF condition THEN statements ELSE statements END .)
    IF              reduce using rule 4 (if_statement -> IF condition THEN statements ELSE statements END .)
    ID              reduce using rule 4 (if_statement -> IF condition THEN statements ELSE statements END .)

WARNING: 
WARNING: Conflicts:
WARNING: 
WARNING: shift/reduce conflict for PLUS in state 21 resolved as shift
